refactor: use ConcurrentLinkedDeque for assault history
CopyOnWriteArrayList copies the entire backing array on every add/trim;
since history mutations happen on every intercepted request and getHistory()
already materializes an O(n) immutable snapshot anyway, the copy-on-write
read advantage does not apply here.

ConcurrentLinkedDeque gives O(1) non-blocking addLast/pollFirst with native
FIFO semantics, and getHistory() keeps returning an immutable snapshot via
List.copyOf. Extracts the 1000-entry cap into MAX_HISTORY.